git push -u origin master

--- a/index.html
+++ b/index.html
@@ -3,8 +3,46 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="css/normalize.css">
+<link rel="stylesheet" href="css/style.css">
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
+	<nav class="top-navigation">
+	     <div class="content">
+	     <img class="logo" src="images/karma-logo.svg" alt="Karma" width="26">
+	     <ul class="links">
+	       <li class="active">Meet Karma</li>
+	       <li>How it works</li>
+	       <li>Store</li>
+	       <li>Blog</li>
+	       <li>Help</li>
+	       <li>Login</li>
+	       </ul>
+	     </div>	
+
+
+	     </div>
+	     </nav>
+	     <section class="introduction">
+            <div class="contents">
+               <h1>Introducing Karma</h1>
+               <h3>Bring wifi with you, everywhere you go</h3>
+               </div>
+               <div class="buttons">
+               <button>Learn More</button>
+               </div>
+	     </section>
+
+	     <section class="cases">
+	       <h2> Everyone needs a little Karma</h2>
+            <div class="devices"></div>
+                 <img class="items" src="images/icon-devices.svg" alt="devices" width="26">
+            <div class="devices"></div>
+                 <img class="items" src="images/icon-coffee.svg" alt="coffee" width="26">
+            <div class="devices"></div>
+                 <img class="items" src="images/icon-refill.svg" alt="refill" width="26">
+
+	       </section>
 </body>
 </html>
