--- a/index.html
+++ b/index.html
@@ -35,13 +35,17 @@
 	     </section>
 
 	     <section class="cases">
-	       <h2> Everyone needs a little Karma</h2>
-            <div class="devices"></div>
-                 <img class="items" src="images/icon-devices.svg" alt="devices" width="26">
-            <div class="devices"></div>
-                 <img class="items" src="images/icon-coffee.svg" alt="coffee" width="26">
-            <div class="devices"></div>
-                 <img class="items" src="images/icon-refill.svg" alt="refill" width="26">
+	       <h2> Everyone needs a little Karma.</h2>
+            <ul class="devices"></div>
+              <li><img width="127" height="127" src="images/icon-devices.svg" alt="Internet for all devices" width="26" hspace="20">
+				<div class="caption"><h3>Internet for all devices</h3>
+				</div>
+
+              </li>
+            	<li><img img width="127" height="127" src="images/icon-coffee.svg" alt="coffee" width="26"><div class="caption"><h3>Internet for all devices</h3>
+				</div></li>
+                <li><img img width="127" height="127" src="images/icon-refill.svg" alt="refill" width="26"><div class="caption"><h3>Internet for all devices</h3>
+				</div></li>
 
 	       </section>
 </body>
