--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/style.css">
 <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
@@ -55,6 +56,32 @@
                 <h3 class="caption">Pay as you go</h3>
 				</div></li>
                  </ul>
+
+
 	       </section>
+<section>
+	       <footer class="social">
+    <div 	class="final-case">
+     
+         <hr>
+       	    <h5>Join us on</h5>
+        <ul class="icons">
+            <li class="twitter">
+                <i class="fa fa-twitter"></i>
+            </li>
+            <li class="facebook">
+                <i class="fa fa-facebook"></i>
+            </li>
+            <li class="instagram">
+                <i class="fa fa-instagram"></i>
+            </li>
+        </ul>
+        <span class="copy">
+         &copy; Karma Mobility inc.
+           </span>
+    </div>
+    </section>
+</footer>
+
 </body>
 </html>
